# cpp-cache

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench.cpp
examples/: basic_lru.cpp  eviction_callback.cpp  lfu_example.cpp  loader_example.cpp  memoize_example.cpp  multithreaded.cpp  ttl_session.cpp
include/: cache.hpp
tests/: test_cache.cpp
